@@ -1,3 +1,8 @@
+2009-08-16  Aidan Kehoe  <kehoea@parhasard.net>
+
+	* automated/lisp-tests.el (foo): 
+	Test the Common Lisp-compatibile multiple value functionality.
+
 2009-08-11  Aidan Kehoe  <kehoea@parhasard.net>
 
 	* automated/lisp-tests.el: 
